[gd_scene load_steps=7 format=2]

[ext_resource path="res://ammo/grenade.gd" type="Script" id=1]
[ext_resource path="res://assets/ammo/grenade.png" type="Texture" id=2]
[ext_resource path="res://assets/fx/exploding_circle.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 5.0

[sub_resource type="CircleShape2D" id=2]
radius = 160.922

[sub_resource type="CircleShape2D" id=3]
radius = 10.096

[node name="Grenade" type="RigidBody2D"]
collision_layer = 16
collision_mask = 8
mass = 5.0
physics_material_override = SubResource( 1 )
gravity_scale = 10.0
script = ExtResource( 1 )

[node name="Radius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radius"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="BlowupTimer" type="Timer" parent="."]

[node name="Explosion" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Radius" to="." method="_on_Radius_body_entered"]
[connection signal="body_exited" from="Radius" to="." method="_on_Radius_body_exited"]
[connection signal="timeout" from="BlowupTimer" to="." method="_on_BlowupTimer_timeout"]
